; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanClose.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanClose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, %struct.TYPE_4__, i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@ZM_LV_0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"enter\00", align 1
@ZM_WLAN_STATE_CLOSEDED = common dso_local global i32 0, align 4
@wd = common dso_local global %struct.TYPE_6__* null, align 8
@.str.1 = private unnamed_addr constant [5 x i8] c"exit\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfiWlanClose(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @zmw_get_wlan_dev(i32* %3)
  %5 = load i32, i32* @ZM_LV_0, align 4
  %6 = call i32 @zm_msg0_init(i32 %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @ZM_WLAN_STATE_CLOSEDED, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @zfWlanReset(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @zfHpStopRecv(i32* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @zfHpRelease(i32* %14)
  %16 = load i32*, i32** %2, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @zfQueueDestroy(i32* %16, i32 %20)
  %22 = load i32*, i32** %2, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @zfQueueDestroy(i32* %22, i32 %26)
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @zfBssInfoDestroy(i32* %28)
  %30 = load i32, i32* @ZM_LV_0, align 4
  %31 = call i32 @zm_msg0_init(i32 %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zm_msg0_init(i32, i8*) #1

declare dso_local i32 @zfWlanReset(i32*) #1

declare dso_local i32 @zfHpStopRecv(i32*) #1

declare dso_local i32 @zfHpRelease(i32*) #1

declare dso_local i32 @zfQueueDestroy(i32*, i32) #1

declare dso_local i32 @zfBssInfoDestroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
